# task-plan-thingy

./: .env.example  .gitignore  BUTTON_FIXES.md  FEATURES.md  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  setup.bat  setup.py  setup.sh  tasks.dbDEFAULT_LLM_PROVIDER=openai
.github/: copilot-instructions.md
Unthinkableassignment/: pyvenv.cfg
Unthinkableassignment/Scripts/: activate  activate.bat
app/: database.py  models.py  schemas.py
app/services/: llm_service.py  task_planner.py
frontend/: index.html
reports/: junit.xml  lint.txt  mypy.txt  single_test.txt  test_output.txt
tests/: test_main.py  test_services.py
